# KitX-Contracts

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml  publish.yml
KitX.Contract.CSharp/: Connector.cs  IController.cs  IIdentityInterface.cs  IMarketPluginContract.cs  KitX.Contract.CSharp.csproj  README.md  RequestBuilder.cs
KitX.Contract.Cpp/: CMakeLists.txt  kitx_contract.cpp  kitx_contract.h
KitX.Contract.Cpp/include/: kitx_contract.hpp
KitX.Contract.Cpp/source/: kitx_contract.cpp  kitx_contract.hpp
KitX.Contract.Java/: .gitignore
KitX.Contract.Java/src/main/java/org/crequency/kitx/contracts/java/: IController.java  IIdentityInterface.java  IMarketPluginContract.java
KitX.Contract.Java/src/main/java/org/crequency/kitx/ruls/web/: DeviceInfoStruct.java  DeviceLocator.java  Function.java  LoaderStruct.java  OperatingSystems.java  PluginStruct.java
